--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
-streamlit==1.24.0
-pandas==2.0.3
-numpy==1.24.3
-folium==0.14.0
-streamlit-folium==0.13.0
-geopandas==0.13.2
-xgboost==1.7.6
-scikit-learn==1.3.0
+setuptools>=65.5.0
+wheel>=0.38.4
+streamlit>=1.22.0
+pandas>=1.5.3
+numpy>=1.24.3
+matplotlib>=3.7.1
+seaborn>=0.12.2
+plotly>=5.14.1
+folium>=0.14.0
+geopandas>=0.13.0
+scikit-learn>=1.2.2
+xgboost>=1.7.5
+streamlit-folium>=0.11.1
