--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 setuptools>=65.5.0
 wheel>=0.38.4
-streamlit>=1.22.0
-pandas>=1.5.3
-numpy>=1.24.3
+streamlit==1.44.0
+pandas==2.2.2
+numpy==1.26.4
 matplotlib>=3.7.1
 seaborn>=0.12.2
 plotly>=5.14.1
-folium>=0.14.0
-geopandas>=0.13.0
-scikit-learn>=1.2.2
-xgboost>=1.7.5
-streamlit-folium>=0.11.1
+folium==0.19.5
+geopandas==1.0.1
+scikit-learn==1.2.2
+xgboost==3.0.0
+streamlit-folium==0.24.0
